fix width on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@ iframe {
 
 #crawl {
   position: absolute;
+  width: 100vw;
   top: 100vh;
   transform-origin: 50vw 15vh;
   transform: rotateX(45deg);
